Dev exception and refacto and date (#465)
* refactor: moved integration tests into dedicated package

* test: contextualVariableController unit test

* test: controllers unit tests

* test: rest of controller tests

* test: context service unit tests + deprecations

* test: contextual variable service unit tests

* test: some services unit tests

* refactor: use mockito annotations

* chore: imports

* wip: process lunatic raw data test

* test: lunatic json raw data unit test

* test: services tests

* test: save edited no campaignId new condition

* fix: don't use campaignId

* fix: test fixes after merge

* test: more models tests

Also deprecated DataType

* test: cache, context and contextual adapters

* test: adapter tests

* test: surveyunitmodelmongoadapter test

* fix: use deep stubs + rename files

* fix: put back normal stubs, problem is local

* fix: use jacoco

* test: NoDataException

* test: ScheduleDocument & RawResponseInputRepository

* test: OidcServiceTest

* test: FileUtilsTest

* test: controller adapter tests

* chore: remove old tests

* fix: put back stubs for cucumber

* test: health check controller test

* test: raw response controller reworked

* chore: disabled unused mode V2 endpoints

* fix: mode path variable

* refactor: renamed contextualVariableControllerTest

* refactor: moved ControllerAccessTest

* test: removed already tested access tests

* test: updated filiere model json body for tests

* chore: remove unused

* refactor: renamed controller access test

* test: converted raw data saving cucumber into IT

+ chore: french comment

* test: process filiere model raw data IT wip

* test: process raw data integration tests

* refactor: abstract in ControllerAccess IT

* refactor: remove useless autowired

* test: save context

* test: save lunatic model wip

* test: save lunatic parameterized

* test: save lunatic model invalid syntax

* test: get lunatic model and questionnaire IT

* Update UtilsControllerTest.java

* refactor: 