@@ -2,25 +2,43 @@ package fr.insee.genesis.domain.service.surveyunit;
 
 import fr.insee.bpm.metadata.model.VariableType;
 import fr.insee.bpm.metadata.model.VariablesMap;
-import fr.insee.genesis.controller.dto.*;
-import fr.insee.genesis.domain.model.surveyunit.*;
+import fr.insee.genesis.controller.dto.SurveyUnitDto;
+import fr.insee.genesis.controller.dto.SurveyUnitInputDto;
+import fr.insee.genesis.controller.dto.SurveyUnitSimplifiedDto;
+import fr.insee.genesis.controller.dto.VariableDto;
+import fr.insee.genesis.controller.dto.VariableInputDto;
+import fr.insee.genesis.controller.dto.VariableStateDto;
+import fr.insee.genesis.domain.model.surveyunit.DataState;
+import fr.insee.genesis.domain.model.surveyunit.InterrogationId;
+import fr.insee.genesis.domain.model.surveyunit.InterrogationInfo;
+import fr.insee.genesis.domain.model.surveyunit.Mode;
+import fr.insee.genesis.domain.model.surveyunit.SurveyUnitModel;
+import fr.insee.genesis.domain.model.surveyunit.VarIdScopeTuple;
+import fr.insee.genesis.domain.model.surveyunit.VariableModel;
 import fr.insee.genesis.domain.ports.api.SurveyUnitApiPort;
 import fr.insee.genesis.domain.ports.spi.SurveyUnitPersistencePort;
 import fr.insee.genesis.domain.service.metadata.QuestionnaireMetadataService;
 import fr.insee.genesis.domain.utils.GroupUtils;
 import fr.insee.genesis.exceptions.GenesisException;
+import fr.insee.genesis.exceptions.NoDataException;
 import fr.insee.genesis.exceptions.QuestionnaireNotFoundException;
 import fr.insee.genesis.infrastructure.utils.FileUtils;
 import fr.insee.modelefiliere.RawResponseDto;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.time.LocalDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 
 @Service
 @Slf4j
@@ -174,18 +192,30 @@ public class SurveyUnitService implements SurveyUnitApiPort {
      * @return a SurveyUnitSimplifiedDto of the interrogation
      */
     @Override
-    public SurveyUnitSimplifiedDto findSimplifiedByCollectionInstrumentIdAndInterrogationId(
+    public SurveyUnitSimplifiedDto findSimplified(
             String collectionInstrumentId,
             String interrogationId,
-            Mode mode){
+            Mode mode,
+            Instant recordedBefore) throws NoDataException {
         List<SurveyUnitModel> responses = findLatestByIdAndByCollectionInstrumentId(interrogationId, collectionInstrumentId);
 
+        if(responses.isEmpty()){
+            String errorMessage = "No response found for interrogation %s".formatted(interrogationId);
+            log.debug(errorMessage);
+            throw new NoDataException(errorMessage);
+        }
+
+        // We keep only the survey unit recorded in the collection before the time stamp 'recordedBefore'
+        List<SurveyUnitModel> filteredResponses = responses.stream()
+                .filter(su -> su.getRecordDate() != null)
+                .filter(su -> recordedBefore == null || !su.getRecordDate().isAfter(recordedBefore))
+                .toList();
         List<VariableModel> outputVariables = new ArrayList<>();
         List<VariableModel> outputExternalVariables = new ArrayList<>();
         RawResponseDto.QuestionnaireStateEnum questionnaireState = null;
         LocalDateTime validationDate = null;
 
-        for (SurveyUnitModel response : responses) {
+        for (SurveyUnitModel response : filteredResponses) {
             if (!mode.equals(response.getMode())) {
                 continue;
             }
@@ -199,10 +229,13 @@ public class SurveyUnitService implements SurveyUnitApiPort {
             outputExternalVariables.addAll(response.getExternalVariables());
         }
 
-        SurveyUnitModel first = responses.getFirst();
+        if (filteredResponses.isEmpty()){
+            return null;
+        }
+
+        SurveyUnitModel first = filteredResponses.getFirst();
         return SurveyUnitSimplifiedDto.builder()
                 .collectionInstrumentId(first.getCollectionInstrumentId())
-                .campaignId(first.getCampaignId())
                 .interrogationId(first.getInterrogationId())
                 .mode(mode)
                 .usualSurveyUnitId(first.getUsualSurveyUnitId())
@@ -219,18 +252,27 @@ public class SurveyUnitService implements SurveyUnitApiPort {
      * @return a SurveyUnitSimplifiedDto list, 1 DTO / Interrogation
      */
     @Override
-    public List<SurveyUnitSimplifiedDto> findSimplifiedByCollectionInstrumentIdAndInterrogationIdList(
+    public List<SurveyUnitSimplifiedDto> findSimplifiedList(
             String collectionInstrumentId,
-            List<InterrogationId> interrogationIds
+            List<InterrogationId> interrogationIds,
+            Instant recordedBefore
     ) {
         List<Mode> modes = findModesByCollectionInstrumentId(collectionInstrumentId);
         return interrogationIds.stream()
                 .flatMap(interrogationId -> modes.stream()
-                        .map(mode -> findSimplifiedByCollectionInstrumentIdAndInterrogationId(
-                                collectionInstrumentId,
-                                interrogationId.getInterrogationId(),
-                                mode
-                        ))
+                        .map(mode -> {
+                            try {
+                                return findSimplified(
+                                        collectionInstrumentId,
+                                        interrogationId.getInterrogationId(),
+                                        mode,
+                                        recordedBefore
+                                );
+                            } catch (NoDataException e) {
+                                log.debug(e.getMessage());
+                            }
+                            return null;
+                        })
                 )
                 .filter(Objects::nonNull)
                 .toList();
@@ -370,32 +412,8 @@ public class SurveyUnitService implements SurveyUnitApiPort {
     }
 
     @Override
-    public List<InterrogationId> findDistinctInterrogationIdsByQuestionnaireIdAndDateAfter(String questionnaireId, LocalDateTime since) {
-        return  surveyUnitPersistencePort
-                .findInterrogationIdsByQuestionnaireIdAndDateAfter(questionnaireId, since)
-                .stream()
-                .map(su -> new InterrogationId(su.getInterrogationId()))
-                .distinct()
-                .toList();
-    }
-
-    @Override
-    public List<InterrogationId> findDistinctInterrogationIdsByCollectionInstrumentIdAndRecordDateBetween(
-            String collectionInstrumentId,
-            Instant start,
-            Instant end
-    ) {
-
-        return surveyUnitPersistencePort
-                .findInterrogationIdsByCollectionInstrumentIdAndRecordDateBetween(
-                        collectionInstrumentId,
-                        start,
-                        end
-                )
-                .stream()
-                .map(su -> new InterrogationId(su.getInterrogationId()))
-                .distinct()
-                .toList();
+    public List<InterrogationInfo> searchInterrogations(String collectionInstrumentId, Instant start, Instant end) {
+        return surveyUnitPersistencePort.searchInterrogations(collectionInstrumentId, start, end).stream().distinct().toList();
     }
 
     //============ OPTIMISATIONS PERFS (START) ============
@@ -450,33 +468,16 @@ public class SurveyUnitService implements SurveyUnitApiPort {
     public List<Mode> findModesByCollectionInstrumentId(String collectionInstrumentId) {
         List<SurveyUnitModel> surveyUnitModels = surveyUnitPersistencePort.findInterrogationIdsByCollectionInstrumentId(collectionInstrumentId);
         if (surveyUnitModels == null || surveyUnitModels.isEmpty()) {
-            log.warn("No collectionInstrument found with id: {}", collectionInstrumentId);
             throw new QuestionnaireNotFoundException(collectionInstrumentId);
         }
         List<Mode> sources =  surveyUnitModels.stream().map(SurveyUnitModel::getMode).distinct().toList();
         return sources;
     }
 
-    @Override
-    public List<Mode> findModesByCampaignId(String campaignId) {
-        List<SurveyUnitModel> surveyUnitModels = surveyUnitPersistencePort.findInterrogationIdsByCampaignId(campaignId);
-        List<Mode> sources = new ArrayList<>();
-        surveyUnitModels.forEach(surveyUnitModel -> sources.add(surveyUnitModel.getMode()));
-        return sources.stream().distinct().toList();
-    }
-
     //========= OPTIMISATIONS PERFS (START) ==========
     @Override
     public List<Mode> findModesByQuestionnaireIdV2(String questionnaireId) {
         List<SurveyUnitModel> surveyUnitModels = surveyUnitPersistencePort.findModesByQuestionnaireIdV2(questionnaireId);
-        List<Mode> sources = new ArrayList<>();
-        surveyUnitModels.forEach(surveyUnitModel -> sources.add(surveyUnitModel.getMode()));
-        return sources.stream().distinct().toList();
-    }
-
-    @Override
-    public List<Mode> findModesByCampaignIdV2(String campaignId) {
-        List<SurveyUnitModel> surveyUnitModels = surveyUnitPersistencePort.findModesByCampaignIdV2(campaignId);
         List<Mode> sources = new ArrayList<>();
         surveyUnitModels.forEach(surveyUnitModel -> sources.add(surveyUnitModel.getMode()));
         return sources.stream().distinct().toList();
@@ -502,57 +503,8 @@ public class SurveyUnitService implements SurveyUnitApiPort {
     }
 
     @Override
-    public Set<String> findQuestionnaireIdsByCampaignId(String campaignId) {
-            return surveyUnitPersistencePort.findQuestionnaireIdsByCampaignId(campaignId);
-    }
-
-    //========= OPTIMISATIONS PERFS (START) ==========
-    /**
-     * @author Adrien Marchal
-     */
-    @Override
-    public Set<String> findQuestionnaireIdsByCampaignIdV2(String campaignId) {
-        return surveyUnitPersistencePort.findQuestionnaireIdsByCampaignIdV2(campaignId);
-    }
-    //========= OPTIMISATIONS PERFS (END) ==========
-
-    @Override
-    public Set<String> findDistinctCampaignIds() {
-        return surveyUnitPersistencePort.findDistinctCampaignIds();
-    }
-
-    @Override
-    public List<CampaignWithQuestionnaire> findCampaignsWithQuestionnaires() {
-        List<CampaignWithQuestionnaire> campaignsWithQuestionnaireList = new ArrayList<>();
-        for(String campaignId : findDistinctCampaignIds()){
-            Set<String> questionnaires = findQuestionnaireIdsByCampaignId(campaignId);
-            campaignsWithQuestionnaireList.add(new CampaignWithQuestionnaire(campaignId,questionnaires));
-        }
-        return campaignsWithQuestionnaireList;
-    }
-
-    @Override
-    public long countResponsesByCampaignId(String campaignId){
-        return surveyUnitPersistencePort.countByCampaignId(campaignId);
-    }
-
-    @Override
     public Set<String> findDistinctQuestionnairesAndCollectionInstrumentIds() {
         return surveyUnitPersistencePort.findDistinctQuestionnairesAndCollectionInstrumentIds();
-    }
-
-    @Override
-    public List<QuestionnaireWithCampaign> findQuestionnairesWithCampaigns() {
-        List<QuestionnaireWithCampaign> questionnaireWithCampaignList = new ArrayList<>();
-        for(String questionnaireId : findDistinctQuestionnairesAndCollectionInstrumentIds()){
-            Set<String> campaigns = surveyUnitPersistencePort.findCampaignIdsByQuestionnaireId(questionnaireId);
-            questionnaireWithCampaignList.add(new QuestionnaireWithCampaign(
-                    questionnaireId,
-                    campaigns)
-            );
-
-        }
-        return questionnaireWithCampaignList;
     }
 
     @Override
@@ -568,19 +520,18 @@ public class SurveyUnitService implements SurveyUnitApiPort {
                 .toList();
 
         if (statesReceived.contains(DataState.COLLECTED)){
-            throw new GenesisException(400,"You can not persist in database a new value with the state COLLECTED");
+            throw new GenesisException(HttpStatus.BAD_REQUEST,"You can not persist in database a new value with the state COLLECTED");
         }
 
         List<SurveyUnitModel> surveyUnitModels = new ArrayList<>();
 
         for (DataState state : statesReceived){
             SurveyUnitModel surveyUnitModel = SurveyUnitModel.builder()
-                    .campaignId(surveyUnitInputDto.getCampaignId())
                     .mode(surveyUnitInputDto.getMode())
                     .collectionInstrumentId(surveyUnitInputDto.getQuestionnaireId().toUpperCase())
                     .interrogationId(surveyUnitInputDto.getInterrogationId())
                     .state(state)
-                    .recordDate(LocalDateTime.now())
+                    .recordDate(Instant.now())
                     .collectedVariables(new ArrayList<>())
                     .externalVariables(new ArrayList<>())
                     .modifiedBy(userIdentifier)
@@ -616,31 +567,23 @@ public class SurveyUnitService implements SurveyUnitApiPort {
     public String findQuestionnaireIdByInterrogationId(String interrogationId) throws GenesisException {
         List<SurveyUnitModel> surveyUnitModels = surveyUnitPersistencePort.findByInterrogationId(interrogationId);
         if (surveyUnitModels.isEmpty()){
-            throw new GenesisException(404,String.format("The interrogationId %s is not in database",interrogationId));
+            throw new GenesisException(HttpStatus.NOT_FOUND,String.format("The interrogationId %s is not in database",interrogationId));
         }
         Set<String> questionnaireIds = new HashSet<>();
         for(SurveyUnitModel surveyUnitModel : surveyUnitModels){
             questionnaireIds.add(surveyUnitModel.getCollectionInstrumentId());
         }
         if(questionnaireIds.size() > 1){
-            throw new GenesisException(207,String.format("Multiple questionnaires for %s :%n%s",
-                    interrogationId,
-                    String.join("\n", questionnaireIds)
-            ));
+            throw new GenesisException(
+                    HttpStatus.CONFLICT,
+                    "Multiple questionnaires for %s:%n%s".formatted(
+                            interrogationId,
+                            String.join("\n", questionnaireIds)
+                    )
+            );
         }
 
         return questionnaireIds.iterator().next(); //Return first (and supposed only) element of set
-    }
-
-    @Override
-    public Set<String> findCampaignIdsFrom(SurveyUnitInputDto dto) {
-        List<SurveyUnitModel> responses = findByIdsInterrogationAndCollectionInstrument(
-                dto.getInterrogationId(),
-                dto.getQuestionnaireId()
-        );
-        return responses.stream()
-                .map(SurveyUnitModel::getCampaignId)
-                .collect(Collectors.toSet());
     }
 
     @Override
@@ -734,7 +677,7 @@ public class SurveyUnitService implements SurveyUnitApiPort {
 
     private Object getValueWithType(String variableName, String value, VariablesMap variablesMap) {
         if(!variablesMap.hasVariable(variableName)){
-            log.warn("Variable {} not found in variableMap", variableName);
+            log.debug("Variable {} not found in variableMap", variableName);
             return value;
         }
         if(value == null) return null;
@@ -778,7 +721,7 @@ public class SurveyUnitService implements SurveyUnitApiPort {
             //Variable doesn't contain state
             return true;
         }
-        LocalDateTime mostRecentStateDateTime = variableStatesSameState.getFirst().getDate();
+        Instant mostRecentStateDateTime = variableStatesSameState.getFirst().getDate();
         return mostRecentStateDateTime.isBefore(surveyUnitModel.getRecordDate());
     }
 
